# JSON-parser

./: CFP.sln  CMakeFile.txt  CMakeLists.txt  JSON.sln  LICENSE  Makefile  README.md  README_ALT  test.cpp
.github/workflows/: autobuild.yml  ccpp.yml
base/: CFPbase.h
json/: dumps.cpp  json.cpp  json.h  loads.cpp  macros.h
json/json_obj/: json_obj.cpp  json_obj.h  json_obj_internal.cpp  json_obj_internal.h  macros.h
json/parser/: dumps.cpp  loads.cpp  parser.h
msvc/: JSON-static-lib.vcxproj  JSON-static-lib.vcxproj.filters  JSON.vcxproj  JSON.vcxproj.filters
testcase/: testcase1.json  testcase10.json  testcase11.json  testcase12.json  testcase2.json  testcase3.json  testcase4.json  testcase7.json  testcase9.json  testcase_fail1.json
windows/: CFP.vcxproj  CFP.vcxproj.filters  JSON.vcxproj
